# work_on_sawyer

./: CMakeLists.txt  LICENSE  README.md  package.xml
files/: kinect_calibration.yaml
launch/: robot_server.launch  robot_server_camera.launch  robot_server_camera_test.launch
scene_object/: clapboard.scene  rightpole.scene  table.scene
scripts/: cap_dataset.py  control_test.py  force_info.py  gripper_control.py  image_client_test.py  image_test.py  moveit_test.py  prtest.py  pub_static_tf.py  robot_utils.py  tf_test.py
src/: pub_collasion (copy).cpp  pub_collasion.cpp
srv/: ImageProc.srv
